--- a/index.html
+++ b/index.html
@@ -39,15 +39,12 @@
                         <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"></path>
                     </svg>
                 </button>
-                <div class="word-counter-badge">
+                <button class="favorites-btn" id="favoritesBtn" aria-label="View favorites">
                     <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <rect x="3" y="3" width="7" height="7"></rect>
-                        <rect x="14" y="3" width="7" height="7"></rect>
-                        <rect x="14" y="14" width="7" height="7"></rect>
-                        <rect x="3" y="14" width="7" height="7"></rect>
+                        <path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z"></path>
                     </svg>
-                    <span id="wordCounter">1</span>
-                </div>
+                    <span class="favorites-count" id="favoritesCount">0</span>
+                </button>
             </div>
         </header>
 
@@ -132,6 +129,20 @@
                 </svg>
             </button>
         </nav>
+    </div>
+
+        <!-- Favorites Modal -->
+        <div class="modal-overlay" id="favoritesModal">
+            <div class="modal">
+                <div class="modal-header">
+                    <h2>Favoris</h2>
+                    <button class="modal-close" id="closeModal">×</button>
+                </div>
+                <div class="modal-content" id="favoritesList">
+                    <!-- Filled by JS -->
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="words.js"></script>
