Fix date change on navigation + add color coding for letter forms

--- a/index.html
+++ b/index.html
@@ -77,15 +77,19 @@
                 <div class="letter-indicators">
                     <div class="indicator">
                         <span class="indicator-dot isolated"></span>
-                        Isolated
+                        Isolée
                     </div>
                     <div class="indicator">
                         <span class="indicator-dot initial"></span>
-                        Initial
+                        Début
+                    </div>
+                    <div class="indicator">
+                        <span class="indicator-dot medial"></span>
+                        Milieu
                     </div>
                     <div class="indicator">
                         <span class="indicator-dot final"></span>
-                        Final
+                        Fin
                     </div>
                 </div>
             </div>
