--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
                 </svg>
             </button>
         </nav>
+        <p class="swipe-hint">← Glisser pour naviguer →</p>
     </div>
 
         <!-- Favorites Modal -->
