Fix: swipe hint déplacé dans la word-card

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <p class="meaning" id="meaning">nature</p>
                 <p class="meaning-fr" id="meaningFr">la nature</p>
             </div>
+            <p class="swipe-hint">← Glisser →</p>
         </main>
 
         <!-- Letter Breakdown -->
@@ -144,7 +145,7 @@
                 </svg>
             </button>
         </nav>
-        <p class="swipe-hint">← Glisser pour naviguer →</p>
+        
     </div>
 
         <!-- Favorites Modal -->
